ontol/ontol-compiler/test-cases/error/repr/abstract1.on
def foo ( // ERROR type not representable
    rel .'id'|id: (rel .is: text)
    rel .'n':
        number // NOTE Type of field is abstract
)
